# play-different-games

./: .gitignore  .license-tools-config.json  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  Procfile.dev  README.md  SECURITY.md  conftest.py  manage.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/changelog/: index.html
dev/code_of_conduct/: index.html
dev/contributing/: index.html
dev/reference/: SUMMARY.txt
dev/reference/play_different_games/admin/: index.html
dev/reference/play_different_games/asgi/: index.html
dev/reference/play_different_games/catalog/admin/: index.html
dev/reference/play_different_games/catalog/apps/: index.html
dev/reference/play_different_games/catalog/models/: index.html
dev/reference/play_different_games/catalog/views/: index.html
dev/reference/play_different_games/context_processors/: index.html
dev/reference/play_different_games/core/apps/: index.html
dev/reference/play_different_games/core/models/: index.html
dev/reference/play_different_games/core/tasks/: index.html
dev/reference/play_different_games/core/utils/: index.html
dev/reference/play_different_games/settings/: index.html
dev/reference/play_different_games/urls/: index.html
dev/reference/play_different_games/users/admin/: index.html
dev/reference/play_different_games/users/apps/: index.html
dev/reference/play_different_games/users/forms/: index.html
dev/reference/play_different_games/users/middleware/: index.html
dev/reference/play_different_games/users/models/: index.html
dev/reference/play_different_games/users/rules/: index.html
dev/reference/play_different_games/users/urls/: index.html
dev/reference/play_different_games/users/views/: index.html
dev/reference/play_different_games/users/zones/: index.html
dev/reference/play_different_games/views/: index.html
dev/search/: search_index.json
dev/security/: index.html
docs/scripts/: gen_ref_files.py
src/play_different_games/: __init__.py  admin.py  asgi.py  context_processors.py  settings.py  urls.py  views.py
src/play_different_games/catalog/: admin.py  apps.py  models.py  views.py
src/play_different_games/core/: __init__.py  apps.py  models.py  tasks.py  utils.py
src/play_different_games/core/migrations/: 0001_initial.py
src/play_different_games/static/css/: app.css
src/play_different_games/static/js/: app.js
src/play_different_games/templates/: base.html  home.html
src/play_different_games/templates/registration/: login.html  password_change_form.html  profile_detail.html  profile_update.html
src/play_different_games/users/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  rules.py  urls.py  views.py  zones.py
src/play_different_games/users/migrations/: 0001_initial.py  0002_auto_20241025_1151.py
tests/: __init__.py  test_example.py
tests/core/: __init__.py  models.py  test_slug_models.py
tests/users/: __init__.py  test_views.py
